--- a/docker/config/plexpy/config.ini
+++ b/docker/config/plexpy/config.ini
@@ -46,25 +46,25 @@ http_host = 0.0.0.0
 http_password = PBKDF2$sha256$10000$UcaKpqMD65AOA19iP+ShwA==$VFO5jsHYctdc1CqwmYd58gnPr2DCX0Cw
 http_port = 8181
 http_proxy = 0
-http_root = ""
+http_root = /tautulli
 http_username = dhoffman
 http_plex_admin = 1
 http_base_url = ""
 interface = default
 launch_browser = 1
-launch_startup = 1
+launch_startup = 0
 log_blacklist = 1
 log_dir = /config/logs
 musicbrainz_lookup = 0
 plexpy_auto_update = 0
-show_advanced_settings = 0
+show_advanced_settings = 1
 themoviedb_apikey = e9a6655bae34bf694a0f3e33338dc28e
 themoviedb_lookup = 0
 tvmaze_lookup = 0
 update_db_interval = 24
 update_show_changelog = 0
 week_start_monday = 0
-sys_tray_icon = 1
+sys_tray_icon = 0
 [[get_file_sizes_hold]]
 section_ids = ,
 rating_keys = ,
@@ -88,8 +88,8 @@ pms_plexpass = 0
 pms_platform = Linux
 pms_version = 1.19.5.3112-b23ab3896
 pms_update_channel = plex
-pms_update_distro = ""
-pms_update_distro_build = ""
+pms_update_distro = debian
+pms_update_distro_build = linux-x86
 pms_web_url = https://app.plex.tv/desktop
 [Advanced]
 pms_timeout = 15
