--- a/docker/sma/autoProcess.ini
+++ b/docker/sma/autoProcess.ini
@@ -20,6 +20,7 @@ post-process = False
 detailed-progress = False
 preopts = 
 postopts = 
+hwdevices = vaapi:/dev/dri/renderD128
 
 [Permissions]
 chmod = 0644
