--- a/docker/config/nginx/conf.d/default.conf
+++ b/docker/config/nginx/conf.d/default.conf
@@ -47,20 +47,20 @@ location /web/ {
     proxy_pass http://tautulli:8181/tautulli/;
   }
 
-#  location /nzbget {
-#    proxy_pass http://nzbget:6789/nzbget/;
-#  }
+  location /nzbget {
+    proxy_pass http://nzbget:6789/nzbget/;
+  }
 
-#  location ~ ^/nzbget($|./*) {
-#    rewrite /nzbget/(.*) /$1 break;
-#    proxy_pass http://nzbget:6789;
-#    proxy_set_header Host $host;
-#    proxy_set_header X-Real-IP $remote_addr;
-#    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#  }
+  location ~ ^/nzbget($|./*) {
+    rewrite /nzbget/(.*) /$1 break;
+    proxy_pass http://nzbget:6789;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
 
-#  location ~ ^/nzbget$ {
-#    return 302 $scheme://$host$request_uri/;
-#  }
+  location ~ ^/nzbget$ {
+    return 302 $scheme://$host$request_uri/;
+  }
 
 }
