--- a/docker/config/nginx/conf.d/default.template
+++ b/docker/config/nginx/conf.d/default.template
@@ -4,7 +4,7 @@ server {
 
   # Everything is a 404
   location / {
-    root /var/lib/nginx/html/;
+    root /etc/nginx/html/;
     auth_basic "Restricted Content";
     auth_basic_user_file /etc/nginx/.htpasswd;
   }
