--- a/docker/config/nzbget/nzbget.conf
+++ b/docker/config/nzbget/nzbget.conf
@@ -157,7 +157,7 @@ Server1.Active=yes
 #
 # The name is used in UI and for logging. It can be any string, you
 # may even leave it empty.
-Server1.Name=
+Server1.Name=XS Usenet
 
 # Level (priority) of news server (0-99).
 #
@@ -171,7 +171,7 @@ Server1.Name=
 #
 # Several servers with the same level may be defined, they have
 # the same priority.
-Server1.Level=0
+Server1.Level=99
 
 # This is an optional non-reliable server (yes, no).
 #
@@ -184,7 +184,7 @@ Server1.Level=0
 # (costly) upper level servers if one of main servers is temporary
 # unavailable. However, for less reliable servers you may prefer to ignore
 # connection errors and go on with higher-level servers instead.
-Server1.Optional=no
+Server1.Optional=yes
 
 # Group of news server (0-99).
 #
@@ -197,16 +197,16 @@ Server1.Optional=no
 Server1.Group=0
 
 # Host name of news server.
-Server1.Host=my.newsserver.com
+Server1.Host=free.xsusenet.com
 
 # Port to connect to (1-65535).
 Server1.Port=119
 
 # User name to use for authentication.
-Server1.Username=user
+Server1.Username=123698180783
 
 # Password to use for authentication.
-Server1.Password=pass
+Server1.Password=d7369aa977
 
 # Server requires "Join Group"-command (yes, no).
 Server1.JoinGroup=no
@@ -231,7 +231,7 @@ Server1.Encryption=no
 Server1.Cipher=
 
 # Maximum number of simultaneous connections to this server (0-999).
-Server1.Connections=4
+Server1.Connections=5
 
 # Server retention time (days).
 #
@@ -241,7 +241,7 @@ Server1.Connections=4
 # news server.
 #
 # Value "0" disables retention check.
-Server1.Retention=0
+Server1.Retention=10
 
 # IP protocol version (auto, ipv4, ipv6).
 Server1.IpVersion=auto
@@ -1674,3 +1674,15 @@ ShellOverride=
 # Value "-1" disables "file-downloaded"-events. Scripts are still
 # notified on other events (such as "nzb-added" or "nzb-downloaded").
 EventInterval=0
+Category2.DestDir=
+Category2.Unpack=yes
+Category2.Extensions=
+Category2.Aliases=
+Category3.DestDir=
+Category3.Unpack=yes
+Category3.Extensions=
+Category3.Aliases=
+Category4.DestDir=
+Category4.Unpack=yes
+Category4.Extensions=
+Category4.Aliases=
