--- a/docker/config/deluge/core.conf
+++ b/docker/config/deluge/core.conf
@@ -27,7 +27,7 @@
     "geoip_db_location": "/usr/share/GeoIP/GeoIP.dat",
     "ignore_limits_on_local_network": true,
     "info_sent": 0.0,
-    "listen_interface": "10.88.12.6",
+    "listen_interface": "10.93.15.6",
     "listen_ports": [
         6890,
         6890
@@ -89,6 +89,7 @@
     "seed_time_ratio_limit": 0.0,
     "send_info": false,
     "sequential_download": false,
+    "session_timeout": 31536000,
     "share_ratio_limit": 0.0,
     "shared": false,
     "stop_seed_at_ratio": true,
