--- a/docker/config/deluge/label.conf
+++ b/docker/config/deluge/label.conf
@@ -41,22 +41,7 @@
         }
     },
     "torrent_labels": {
-        "1f2929969974d1d53f8e36cf08c892d0e10b8cfb": "tv-sonarr",
-        "21c0878e2056d366a815c6aec8fafc1814daa787": "tv-sonarr",
-        "26134ef323aca4bb87fc803e704eeddbd77c2c6e": "tv-sonarr",
-        "3ce458c7f7de719fbd1e5f4d2c519011788ca788": "tv-sonarr",
-        "50181925fd12534bab85e1429a29775c9347d0ba": "tv-sonarr",
-        "5f4bd6cae99163dc132bf0ab646fd0dfd9ab4e29": "tv-sonarr",
-        "6a62715a07994dcad679de2a5bd6c27e073596da": "tv-sonarr",
-        "9a84dea77ed949498afa0d05ba2de4760770a78d": "tv-sonarr",
-        "a577fdbbe619ee54dc14ae92365bc8d2dafc09da": "tv-sonarr",
-        "b04001fece8df0ba05b0a2678ae486c6e01eb89a": "tv-sonarr",
-        "b3f3a921888b1512f50eb1b4f6bfccc9833b83d8": "tv-sonarr",
-        "bed524d081fc8f3631ab17243fe8b34da31b4be7": "tv-sonarr",
         "cecaf2b7651b425bbc614291aea88736c8b470f3": "movies",
-        "d4b6c86c6c60ab96f6176fdf642ddae40ebe8e72": "movies",
-        "d902a5a5eb8a77bd4ff24c95eb9e8816b03d847f": "tv-sonarr",
-        "fbd77b1758e036b28265aeec36ce765da2803254": "tv-sonarr",
-        "fd7f59651c29cc4f4f6f94ea6f672a7f758b9a30": "tv-sonarr"
+        "e70042251d9c2ca82a474cf23b951226a75f1e27": "movies"
     }
 }
