--- a/docker/config/sma/autoProcess.ini
+++ b/docker/config/sma/autoProcess.ini
@@ -21,6 +21,7 @@ detailed-progress = False
 preopts = 
 postopts = 
 hwdevices = vaapi:/dev/dri/renderD128
+hwaccel-output-format = vaapi:vaapi
 
 [Permissions]
 chmod = 0644
