--- a/docker/config/deluge/core.conf
+++ b/docker/config/deluge/core.conf
@@ -89,6 +89,7 @@
     "seed_time_ratio_limit": 0.0,
     "send_info": false,
     "sequential_download": false,
+    "session_timeout": 31536000,
     "share_ratio_limit": 0.0,
     "shared": false,
     "stop_seed_at_ratio": true,
