--- a/environment_variables.template
+++ b/environment_variables.template
@@ -39,3 +39,5 @@ PLEX_VIDEO_CLEANER_BASEURL=http://plex:32400
 PLEX_VIDEO_CLEANER_TOKEN=
 #PLEX_VIDEO_CLEANER_USERNAME=
 #PLEX_VIDEO_CLEANER_PASSWORD=
+
+LETS_ENCRYPT_API_KEY=iDuWe5eZ30IRPJMYvpAV
