--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./docker/downloads:/downloads
       - ./docker/config/deluge:/config
-      - /etc/localtime:/etc/localtime:ro
+      # - /etc/localtime:/etc/localtime:ro
     cap_add:
       - NET_ADMIN
     env_file:
@@ -174,19 +174,19 @@ services:
       - 65456:65456
     restart: unless-stopped
 
-  plexcleaner:
-    networks:
-      kodi_server:
-        ipv4_address: 192.168.2.80
-        aliases:
-          - plexcleaner
-    container_name: plexcleaner
-    image: mmxca/media-center-plexcleaner:latest
-    restart: unless-stopped
-    env_file:
-      - environment_variables
-    volumes:
-      - /home/dhoffman/docker/logs/plexcleaner:/logs
+  # plexcleaner:
+  #   networks:
+  #     kodi_server:
+  #       ipv4_address: 192.168.2.80
+  #       aliases:
+  #         - plexcleaner
+  #   container_name: plexcleaner
+  #   image: mmxca/media-center-plexcleaner:latest
+  #   restart: unless-stopped
+  #   env_file:
+  #     - environment_variables
+  #   volumes:
+  #     - /home/dhoffman/docker/logs/plexcleaner:/logs
 
 networks:
   kodi_server:
