--- a/docker/config/deluge/label.conf
+++ b/docker/config/deluge/label.conf
@@ -41,7 +41,7 @@
         }
     },
     "torrent_labels": {
-        "cecaf2b7651b425bbc614291aea88736c8b470f3": "movies",
+        "6a62715a07994dcad679de2a5bd6c27e073596da": "tv-sonarr",
         "e70042251d9c2ca82a474cf23b951226a75f1e27": "movies"
     }
 }
