--- a/docker/config/plexpy/config.ini
+++ b/docker/config/plexpy/config.ini
@@ -29,7 +29,7 @@ git_repo = Tautulli
 group_history_tables = 1
 history_table_activity = 1
 home_sections = current_activity, watch_stats, library_stats, recently_added
-home_library_cards = 1, 3, 2
+home_library_cards = 1, 3, 2, 1, 3, 2
 home_stats_cards = top_movies, popular_movies, top_tv, popular_tv, top_music, popular_music, last_watched, top_users, top_platforms, most_concurrent
 home_refresh_interval = 10
 https_create_cert = 0
