--- a/docker/config/nzbget/nzbget.conf
+++ b/docker/config/nzbget/nzbget.conf
@@ -157,7 +157,7 @@ Server1.Active=yes
 #
 # The name is used in UI and for logging. It can be any string, you
 # may even leave it empty.
-Server1.Name=XS Usenet
+Server1.Name=Usenet Express
 
 # Level (priority) of news server (0-99).
 #
@@ -171,7 +171,7 @@ Server1.Name=XS Usenet
 #
 # Several servers with the same level may be defined, they have
 # the same priority.
-Server1.Level=99
+Server1.Level=0
 
 # This is an optional non-reliable server (yes, no).
 #
@@ -184,7 +184,7 @@ Server1.Level=99
 # (costly) upper level servers if one of main servers is temporary
 # unavailable. However, for less reliable servers you may prefer to ignore
 # connection errors and go on with higher-level servers instead.
-Server1.Optional=yes
+Server1.Optional=no
 
 # Group of news server (0-99).
 #
@@ -197,16 +197,16 @@ Server1.Optional=yes
 Server1.Group=0
 
 # Host name of news server.
-Server1.Host=free.xsusenet.com
+Server1.Host=news.usenetexpress.com
 
 # Port to connect to (1-65535).
 Server1.Port=119
 
 # User name to use for authentication.
-Server1.Username=123698180783
+Server1.Username=une9889045
 
 # Password to use for authentication.
-Server1.Password=d7369aa977
+Server1.Password=zasiqigah7z8ko
 
 # Server requires "Join Group"-command (yes, no).
 Server1.JoinGroup=no
@@ -231,7 +231,7 @@ Server1.Encryption=no
 Server1.Cipher=
 
 # Maximum number of simultaneous connections to this server (0-999).
-Server1.Connections=5
+Server1.Connections=50
 
 # Server retention time (days).
 #
@@ -241,7 +241,7 @@ Server1.Connections=5
 # news server.
 #
 # Value "0" disables retention check.
-Server1.Retention=10
+Server1.Retention=0
 
 # IP protocol version (auto, ipv4, ipv6).
 Server1.IpVersion=auto
@@ -1695,3 +1695,19 @@ Notify.py:IncludeFiles=yes
 Notify.py:IncludeLogs=OnFailure
 Notify.py:IncludeImage=yes
 Notify.py:Debug=no
+Server2.Active=yes
+Server2.Name=XS Usenet
+Server2.Level=99
+Server2.Optional=yes
+Server2.Group=0
+Server2.Host=free.xsusenet.com
+Server2.Port=119
+Server2.Username=123698180783
+Server2.Password=d7369aa977
+Server2.JoinGroup=no
+Server2.Encryption=no
+Server2.Cipher=
+Server2.Connections=5
+Server2.Retention=10
+Server2.IpVersion=auto
+Server2.Notes=
